--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -145,7 +145,7 @@ msgid "Photo"
 msgstr ""
 
 msgctxt "#30355"
-msgid "Album"
+msgid "Album / TV Series / Movie Sets"
 msgstr ""
 
 msgctxt "#30356"
@@ -545,7 +545,7 @@ msgid "UPnP Server Response Logging"
 msgstr ""
 
 msgctxt "#30455"
-msgid "Mezzmo Records Processed: "
+msgid "Mezzmo Records\nProcessed:  "
 msgstr ""
 
 msgctxt "#30456"
@@ -758,6 +758,34 @@ msgstr ""
 
 msgctxt "#30808"
 msgid "Kodi Additional Artwork"
+msgstr ""
+
+msgctxt "#30809"
+msgid " of "
+msgstr ""
+
+msgctxt "#30810"
+msgid "Search Default Sort Order"
+msgstr ""
+
+msgctxt "#30811"
+msgid "Search Default Content Type"
+msgstr ""
+
+msgctxt "#30812"
+msgid "Last Played"
+msgstr ""
+
+msgctxt "#30813"
+msgid "Hide Watched Monitoring"
+msgstr ""
+
+msgctxt "#30814"
+msgid "Mezzmo Hide Watched Checking Enabled.  Check General Logs for details."
+msgstr ""]
+
+msgctxt "#30815"
+msgid "Modify search criteria"
 msgstr ""
 
 msgctxt "#30501"
@@ -997,11 +1025,11 @@ msgid "When enabled reduces the amount of addon general log entries in the Kodi 
 msgstr ""
 
 msgctxt "#30560"
-msgid "Adjusts Mezzmo Preview trailer playback volume.  This can be used when the Mezzmo Preview trailer volume is different than the main movie.  Default is 100 percent."
+msgid "Adjusts Mezzmo Preview trailer playback volume.  This can be used when the Mezzmo Preview trailer volume is different than the main movie.  This option wil have no effect if trailer audio codec is in passthrough mode.  Default is 100 percent."
 msgstr ""
 
 msgctxt "#30561"
-msgid "Adjusts Mezzmo Preview movie playback volume.  This can be used when the Mezzmo Preview movie volume is different than the trailer volume.  Default is 100 percent."
+msgid "Adjusts Mezzmo Preview movie playback volume.  This can be used when the Mezzmo Preview movie volume is different than the trailer volume.  This option wil have no effect if movie audio codec is in passthrough mode.  Default is 100 percent."
 msgstr ""
 
 msgctxt "#30562"
@@ -1030,3 +1058,24 @@ msgstr ""
 msgctxt "#30568"
 msgid "Adds additional Kodi artwork entries such as Clearlogo, Clearart, Banner and more which can leverage the UserPoster feature for additional artwork.  Default is disabled."
 msgstr ""
+
+msgctxt "#30569"
+msgid "Selects the sort order for Mezzmo search results.  The default setting is Default."
+msgstr ""
+
+msgctxt "#30570"
+msgid "Selects the default content type for Mezzmo search results.  The default setting is None which will use the search results content type."
+msgstr ""
+
+msgctxt "#30571"
+msgid "Enables video item context menu for quick recall of last played video media items. The default setting is 10.  0 disables this context menu option."
+msgstr ""
+
+msgctxt "#30572"
+msgid "Return to Kodi library home screen"
+msgstr ""
+
+msgctxt "#30573"
+msgid "Monitors Hide Watched setting druing hourly background sync process.  Options are log to general logs or log and notify via GUI.  Default is Off."
+msgstr ""
+
