--- a/resources/language/resource.language.pt_br/strings.po
+++ b/resources/language/resource.language.pt_br/strings.po
@@ -145,8 +145,8 @@ msgid "Photo"
 msgstr "Foto"
 
 msgctxt "#30355"
-msgid "Album"
-msgstr "Álbum"
+msgid "Album / TV Series / Movie Sets"
+msgstr "Álbum / Série de TV / Sets de filmes"
 
 msgctxt "#30356"
 msgid "Artist"
@@ -760,6 +760,34 @@ msgctxt "#30808"
 msgid "Kodi Additional Artwork"
 msgstr "Arte adicional Kodi"
 
+msgctxt "#30809"
+msgid " of "
+msgstr " de "
+
+msgctxt "#30810"
+msgid "Search Default Sort Order"
+msgstr "Ordem de classificação padrão de pesquisa"
+
+msgctxt "#30811"
+msgid "Search Default Content Type"
+msgstr "Pesquisar tipo de conteúdo padrão"
+
+msgctxt "#30812"
+msgid "Last Played"
+msgstr "Jogado pela última vez"
+
+msgctxt "#30813"
+msgid "Hide Watched Monitoring"
+msgstr "Ocultar monitoramento assistido"
+
+msgctxt "#30814"
+msgid "Mezzmo Hide Watched Checking Enabled.  Check General Logs for details."
+msgstr "Mezzmo Ocultar verificação assistida habilitada.  Verifique os registros gerais para obter detalhes."
+
+msgctxt "#30815"
+msgid "Modify search criteria"
+msgstr "Modifique os critérios de pesquisa"
+
 msgctxt "#30501"
 msgid "Set bookmark delay 0-30 secs behind current playback position."
 msgstr "Defina o atraso do marcador de 0 a 30 segundos atrás da posição de reprodução atual."
@@ -997,12 +1025,12 @@ msgid "When enabled reduces the amount of addon general log entries in the Kodi 
 msgstr "Quando ativado, reduz a quantidade de entradas de log gerais adicionais no arquivo de log Kodi. Todos os logs ainda são enviados para o visualizador de log do complemento Mezzmo Kodi. O padrão é desabilitado."
 
 msgctxt "#30560"
-msgid "Adjusts Mezzmo Preview trailer playback volume.  This can be used when the Mezzmo Previews trailer volume is different than the main movie.  Default is 100 percent."
-msgstr "Ajusta o volume de reprodução do trailer do Mezzmo Preview. Isso pode ser usado quando o volume do trailer do Mezzmo Previews é diferente do filme principal. O padrão é 100 por cento."
+msgid "Adjusts Mezzmo Preview trailer playback volume.  This can be used when the Mezzmo Preview trailer volume is different than the main movie.  This option wil have no effect if trailer audio codec is in passthrough mode.  Default is 100 percent."
+msgstr "Ajusta o volume de reprodução do trailer do Mezzmo Preview.  Isso pode ser usado quando o volume do trailer do Mezzmo Preview é diferente do filme principal.  Esta opção não terá efeito se o codec de áudio do trailer estiver no modo passthrough.  O padrão é 100 por cento."
 
 msgctxt "#30561"
-msgid "Adjusts Mezzmo Preview movie playback volume.  This can be used when the Mezzmo Previews movie volume is different than the trailer volume.  Default is 100 percent."
-msgstr "Ajusta o volume de reprodução do filme Mezzmo Preview. Isso pode ser usado quando o volume do filme Mezzmo Previews é diferente do volume do trailer. O padrão é 100 por cento."
+msgid "Adjusts Mezzmo Preview movie playback volume.  This can be used when the Mezzmo Preview movie volume is different than the trailer volume.  This option wil have no effect if movie audio codec is in passthrough mode.  Default is 100 percent."
+msgstr "Ajusta o volume de reprodução do filme Mezzmo Preview.  Isso pode ser usado quando o volume do filme Mezzmo Preview é diferente do volume do trailer.  Esta opção não terá efeito se o codec de áudio do filme estiver no modo passthrough.  O padrão é 100 por cento."
 
 msgctxt "#30562"
 msgid "When enabled only syncs and displays one studio with Kodi. This is to address certain Kodi skins which can only handle a single studio.   Default is disabled."
@@ -1031,3 +1059,23 @@ msgstr "Acrescenta informações adicionais, como data/hora da última reproduç
 msgctxt "#30568"
 msgid "Adds additional Kodi artwork entries such as Clearlogo, Clearart, Banner and more which can leverage the UserPoster feature for additional artwork.  Default is disabled."
 msgstr "Adiciona entradas adicionais de arte Kodi, como Clearlogo, Clearart, Banner e muito mais, que podem aproveitar o recurso UserPoster para arte adicional.  O padrão é desabilitado."
+
+msgctxt "#30569"
+msgid "Selects the sort order for Mezzmo search results.  The default setting is Default."
+msgstr "Seleciona a ordem de classificação dos resultados da pesquisa do Mezzmo.  A configuração padrão é Padrão."
+
+msgctxt "#30570"
+msgid "Selects the default content type for Mezzmo search results.  The default setting is None which will use the search results content type"
+msgstr "Seleciona o tipo de conteúdo padrão para os resultados da pesquisa Mezzmo.  A configuração padrão é Nenhum, que usará o tipo de conteúdo dos resultados da pesquisa"
+
+msgctxt "#30571"
+msgid "Enables video item context menu for quick recall of last played video media items. The default setting is 10.  0 disables this context menu option."
+msgstr "Ativa o menu de contexto do item de vídeo para recuperação rápida dos últimos itens de mídia de vídeo reproduzidos. A configuração padrão é 10. 0 desativa esta opção do menu de contexto."
+
+msgctxt "#30572"
+msgid "Return to Kodi library home screen"
+msgstr "Retornar à tela inicial da biblioteca Kodi"
+
+msgctxt "#30573"
+msgid "Monitors Hide Watched setting druing hourly background sync process.  Options are log to general logs or log and notify via GUI.  Default is Off."
+msgstr "Os monitores ocultam a configuração assistida durante o processo de sincronização em segundo plano de hora em hora.  As opções são registrar em logs gerais ou registrar e notificar via GUI.  O padrão é desativado."
